name:                   w5j-backend
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, DeriveGeneric
  exposed-modules:      W5J.GremlinTest,
                        W5J.What,
                        W5J.When,
                        W5J.Where,
                        W5J.Interval,
                        W5J.Time,
                        W5J.DB.TinkerPop
  other-modules:        W5J.DB.TinkerPop.Error,
                        W5J.DB.TinkerPop.Parse,
                        W5J.Aeson
  build-depends:        base,
                        text,
                        time,
                        unix-time,
                        intervals,
                        gremlin-haskell,
                        unordered-containers,
                        aeson,
                        transformers

executable w5j-backend
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports
  -- other-modules:        
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  build-depends:        base, w5j-backend

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  -- other-extensions:     
  other-modules:        W5J.TimeSpec
  build-depends:        base, w5j-backend,
                        hspec,
                        QuickCheck

source-repository head
  type:                 git
--  location:             
